# RAG-SMI

./: README.md
rag_evaluation/: README.md  pyproject.toml
rag_evaluation/src/rag_evaluation/: crew.py  evaluation.py  evaluation_results.csv  evaluation_results2.csv  evaluation_results3.csv  evaluation_results4.csv  main.py  qa-state-machine.json  test.py
rag_evaluation/src/rag_evaluation/config/: agents.yaml  tasks.yaml
